- Fixed a bug preventing the modification of the access level of a command when the "access-level" attribute was set on the <command> element
- Added a visibility parameter on channels, it's now possible to have an invisible channel on the /list result
- Channels can now be created from the administration console
- The IP of the server is no longer submitted to tfast.org since the site is dead

Developer visible changes
- added a readLine(Reader) method in the Protocol interface
- Renamed Client.receiveMessage() into Client.receive()
- removed the dependency on JDIC


Changes in version 0.2.3 (2008-08-23)
-------------------------------------

- Fixed a bug in the mode 4 (25% pure) of the #custom channel that was causing a crash of the classic tnet 1.13 client
- The address of the server is now published to http://servers.tetrinet.fr instead of tsrv.com, tetrinet.org and tfast.org


Changes in version 0.2.2 (2005-04-07)
-------------------------------------

- Fixed a bug preventing the clients from connecting to a server with a default charset different from ISO-8859-1
- The configuration is no longer broken by a "&" char in the description of a channel


Changes in version 0.2.1 (2005-02-18)
-------------------------------------

- Fixed the Shutdown button on the server administration page
- Fixed a bug preventing the configuration files from being saved if the server was installed in a path containing
  a space character
- Running Jetrix with jetrix.exe no longer saturate the CPU
- Fixed a bug preventing the execution of several query commands with the same connection


Changes in version 0.2.1 (2005-02-18)
-------------------------------------

- Fixed the Shutdown button on the server administration page
- Fixed a bug preventing the configuration files from being saved if the server was installed in a path containing a space character
- Running Jetrix with jetrix.exe no longer saturate the CPU