@@ -18,6 +18,7 @@ Admin visible changes
 - Added a visibility parameter on channels, it's now possible to have an invisible channel on the /list result
 - Channels can now be created from the administration console
 - The IP of the server is no longer submitted to tfast.org since the site is dead
+- The web administration console has been moved from port 8080 to port 31460
 
 Developer visible changes
 - added a readLine(Reader) method in the Protocol interface
